# AffectKit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
affectkit/: __init__.py  engine.py  memory.py  profiles.py  safety.py  state.py
affectkit/adapters/: __init__.py  basic.py  langchain.py  langgraph.py
affectkit/builtin_profiles/: angry_but_safe.yaml  hostile_customer_redteam.yaml
affectkit/visualization/: __init__.py  timeline.py
docs/: custom-profiles.md  emotion-model.md  integrations.md  roadmap.md  safety.md
examples/: angry_customer_sim.py  basic_chat.py  langchain_example.py  langgraph_example.py  npc_simulation.py
profiles/: anxious_researcher.yaml  calm_supportive.yaml  sad_companion.yaml  strict_teacher.yaml
tests/: test_engine.py  test_memory.py  test_profiles.py  test_safety.py  test_state.py
