[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "affectkit"
version = "0.1.0"
description = "Emotion-state middleware for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "AffectKit contributors" }
]
keywords = [
  "llm",
  "agents",
  "emotion-state",
  "middleware",
  "langchain",
  "langgraph",
  "safety"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = [
  "pydantic>=2,<3",
  "PyYAML>=6"
]

[project.optional-dependencies]
langchain = ["langchain-core"]
langgraph = ["langgraph"]
dev = ["pytest", "ruff", "mypy", "pydantic", "pyyaml"]

[project.urls]
Homepage = "https://github.com/affectkit/affectkit"
Issues = "https://github.com/affectkit/affectkit/issues"

[tool.setuptools.packages.find]
include = ["affectkit*"]

[tool.setuptools.package-data]
affectkit = ["builtin_profiles/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
